# vulnpipe

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml  publish.yml  security-scan.yml
assets/: demo.tape
configs/: default.yaml  false_positives.example.yaml  policy.example.yaml  sla.example.yaml  targets.example.yaml  targets.lab.yaml
docker/: Dockerfile  docker-compose.lab.yml  docker-compose.yml  entrypoint.sh
docs/: ARCHITECTURE.md  DECISIONS.md  case-study.md
examples/: README.md  sample-remediation.md  sample-report.csv  sample-report.cyclonedx.json  sample-report.gitlab.json  sample-report.html  sample-report.json  sample-report.md  sample-vex.json
scripts/: regenerate_examples.py
tests/: conftest.py
tests/fixtures/: grype_report.json  nmap_vulners.xml  nuclei_results.jsonl  sample_cyclonedx.json  sample_epss.json  sample_kev.json  sample_nmap.xml  sample_nvd_cve.json  sample_osv_response.json  sample_zap_alerts.json  trivy_report.json
tests/integration/: test_pipeline.py  test_smoke.py
tests/unit/: test_auth_contexts.py  test_badge.py  test_baseline.py  test_cli.py  test_config.py  test_csv_reporter.py  test_cvss.py  test_cyclonedx_reporter.py  test_deduplicator.py  test_differ.py  test_enricher.py  test_enrichment_edges.py  test_enrichment_http.py  test_epss_client.py  test_explain.py  test_false_positive.py  test_gate.py  test_gitlab_reporter.py  test_html_reporter.py  test_ingest.py  test_json_reporter.py  test_junit.py  test_kev_client.py  test_logging.py  test_markdown_reporter.py  test_models.py  test_nmap_scanner.py  test_normalizer.py  test_notify.py  test_nuclei_scanner.py  test_nvd_client.py  test_orchestrator.py  test_osv_client.py  test_ownership.py  test_planner.py  test_plugins.py  test_policy.py  test_prioritizer.py  test_prometheus_reporter.py  test_query.py  (+16 more)
vulnpipe/: __init__.py  plugins.py
vulnpipe/auth/: __init__.py  auth_contexts.py
vulnpipe/ci/: __init__.py  baseline.py  differ.py  gate.py  junit.py  policy.py  sla.py  trends.py
vulnpipe/cli/: main.py
vulnpipe/core/: __init__.py  config.py  logging.py  models.py  orchestrator.py  planner.py  standards.py
vulnpipe/enrichment/: __init__.py  _http.py  cvss.py  enricher.py  epss_client.py  kev_client.py  nvd_client.py
vulnpipe/ingest/: __init__.py  grype.py  trivy.py
vulnpipe/notify/: __init__.py  webhook.py
vulnpipe/processing/: __init__.py  deduplicator.py  false_positive.py  normalizer.py  ownership.py  prioritizer.py  query.py
vulnpipe/reporting/: __init__.py  badge.py  base.py  csv_reporter.py  cyclonedx_reporter.py  explain.py  gitlab_reporter.py  html_reporter.py  json_reporter.py  markdown_reporter.py  prometheus_reporter.py  remediation.py  sarif_reporter.py  stats.py  summary.py  vex_reporter.py
vulnpipe/sbom/: __init__.py  analyzer.py  cyclonedx.py  osv_client.py  pipeline.py
vulnpipe/scanners/: __init__.py  base.py  nmap_scanner.py  (+3 more)
(+5 files in other folders)
