[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vulnpipe"
version = "1.7.0"
description = "Modular network + web vulnerability scanning pipeline (detection & reporting only)."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "vulnpipe contributors" }]
keywords = ["security", "vulnerability", "scanning", "nmap", "zap", "nuclei", "trivy", "grype", "owasp", "sarif", "gitlab", "sbom", "osv", "cyclonedx"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.6,<3",
    "pyyaml>=6.0",
    "typer>=0.9",
    "jinja2>=3.1",
    "rich>=13.0",
    "python-libnmap>=0.7.3",
    "zaproxy>=0.1",
    "cvss>=2.0",
    "httpx>=0.24",
    "tenacity>=8.0",
    "diskcache>=5.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "respx>=0.20",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.8",
    "pre-commit>=3.5",
    "types-PyYAML>=6.0",
]

[project.scripts]
vulnpipe = "vulnpipe.cli.main:main"

[project.urls]
Homepage = "https://github.com/connor-p-mccune/vulnpipe"
Repository = "https://github.com/connor-p-mccune/vulnpipe"
Documentation = "https://github.com/connor-p-mccune/vulnpipe/blob/main/docs/ARCHITECTURE.md"
Changelog = "https://github.com/connor-p-mccune/vulnpipe/blob/main/CHANGELOG.md"
Issues = "https://github.com/connor-p-mccune/vulnpipe/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["vulnpipe*"]

[tool.setuptools.package-data]
"vulnpipe" = ["py.typed"]
"vulnpipe.reporting" = ["templates/*"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["vulnpipe", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "C4", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["vulnpipe"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
warn_unused_configs = true
show_error_codes = true
pretty = true

# Untyped third-party scanner/enrichment libraries. Add each module here as the
# stage that imports it lands.
[[tool.mypy.overrides]]
module = ["libnmap.*", "zapv2.*", "cvss.*", "diskcache.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
    "integration: tests that require real scanners or network access (run with -m integration)",
]

[tool.coverage.run]
source = ["vulnpipe"]
branch = true
